--- a/src/App/styles.module.css
+++ b/src/App/styles.module.css
@@ -1,18 +1,21 @@
 .main {
   display: flex;
 }
-
+.current {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .card {
   margin: 15px;
   display: flex;
   background-color: gray;
   padding: 10px;
-  box-shadow: 0px 0px 3px black;
   border-radius: 5px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
   color: antiquewhite;
-  font-size: 10px;
+  font-size: 15px;
 }
