--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
-main {
-  flex: auto;
-}
 
-body {
-  font-family: "Poppins", sans-serif;
-}
+
+
+/* main {
+  display: flex;
+} */
+
